guestbook/www.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-www
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: website
    app.kubernetes.io/part-of: guestbook
    app/language: javascript
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook
      app.kubernetes.io/component: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
        app.kubernetes.io/component: website
        app.kubernetes.io/part-of: guestbook
        app/language: javascript
    spec:
      containers:
        - name: guestbook-ui
          image: gcr.io/heptio-images/ks-guestbook-demo:0.2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "300m"
