guestbook/www.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-www
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: website
    app.kubernetes.io/part-of: guestbook
    app/language: javascript
spec:
  selector:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
