guestbook/www.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: guestbook-www
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: website
    app.kubernetes.io/part-of: guestbook
    app/language: javascript
spec:
  rules:
    - host: guestbook.staging.world.company
      http:
        paths:
          - backend:
              service:
                name: guestbook-www
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - guestbook.staging.world.company
      secretName: guestbook-www-ingress-tls
